apps/dmz/immich/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: dmz
spec:
  replicas: 1
  selector: { matchLabels: { app: immich-server } }
  template:
    metadata: { labels: { app: immich-server } }
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values: ["amd64"]
      securityContext: { fsGroup: 1000 }
      containers:
      - name: server
        image: ghcr.io/immich-app/immich-server:latest # {"$imagepolicy": "flux-system:immich"}
        ports: [{ containerPort: 3001 }]
        volumeMounts:
        - { name: library, mountPath: /usr/src/app/upload }
      volumes:
      - name: library
        persistentVolumeClaim: { claimName: immich-library }
